--- a/style.css
+++ b/style.css
@@ -1,6 +1,31 @@
-.change-color{
-    color: rgb(118, 38, 143);
-}
 h1{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 45px;
+}
+.change-color{
+    color: rgb(228, 97, 10);
+}
+body{
+    font-family: 'Luxurious Roman', cursive;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 10%;
+}
+.half-width img{
+    width: 55%;
+}
+.explore{
+    text-decoration: none;
+    background-color: rgb(17, 207, 191);
+    padding: 10px 30px;
+    border-radius: 10px;
+    color: cornsilk;
+    font-size: larger;
+}
+
+.text-align{
+    text-align : center;
 }
