--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-h1{
-    font-size: 45px;
+.heading{
+    font-size: 40px;
     border-left: 3px solid;
     border-image: linear-gradient(yellow, violet);
     border-image-slice: 1;
-    
+    padding-left: 5px;
 }
+
 .change-color{
     color: rgb(228, 97, 10);
 }
@@ -13,6 +14,7 @@ body{
 }
 .flexible-container{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -41,6 +43,20 @@ body{
     margin-bottom: 5%;
     margin-top: 2%;
     padding-left: 20px;
+    padding-right: 20px;
     border-radius: 20px;
     background-color: rgb(233, 206, 206);
+}
+#middle-banner{
+    background-image: url(images/shapes/shape-1.png);
+    background-size: 15%;
+    background-repeat: no-repeat;
+    background-position: 50px 50px;
+   
+}
+#bottom-banner{
+    background-image: url(images/shapes/shape-1.png);
+    background-size: 15%;
+    background-repeat: no-repeat;
+    background-position: 85% 120%;
 }
